add .npmignore file

--- a/package.json
+++ b/package.json
@@ -64,9 +64,9 @@
   },
   "scripts": {
     "postinstall": "cross-env PUPPETEER_PRODUCT=firefox node node_modules/puppeteer/install.js",
-    "lib-build": "gulp minified",
-    "lib-postbuild": "cp lib-package.json build/package.json && cp README.md build/README.md",
-    "lib-package": "cd build && npm pack"
+    "lib-build": "rm -rf build && gulp minified",
+    "lib-postbuild": "cp lib-package.json build/package.json && cp README.md build/README.md && cp lib-npmignore build/.npmignore",
+    "lib-publish": "cd build && npm publish"
   },
   "repository": {
     "type": "git",
